# birthdays

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: branch.yml  master.yml
k8s/: Dockerfile  Makefile  README.md  birthdays.yml  docker-compose.yml  memcached.yml  sanity_check.rb
src/: Makefile  README.md  docker-compose.test.yml  docker-compose.yml  test-local-curl.sh
src/birthdays/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-test  Makefile  README.md  env.example
src/birthdays/sql/: find_birthday.sql  schema.sql  schema_test.sql  upsert_birthday.sql
src/birthdays/src/: app.rs  errors.rs  handlers.rs  main.rs  validation.rs  view.rs
src/nginx-cache/: Dockerfile  Dockerfile-cloud  Makefile  README.md  default.conf  proxy.conf  swagger.json  tuning.conf
terraform/: .terraform.lock.hcl  Makefile  README.md  apis.tf  bastion.tf  cluster.tf  network.tf  outputs.tf  postgresql.tf  terraform.tfvars.example  variables.tf  versions.tf
